# pixors

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FRONT_REFACTOR_PLAN.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  UI.md  test_ws.py
pixors-color/: Cargo.toml
pixors-color/src/: cmyk.rs  conversion.rs  gray.rs  lib.rs  processor.rs  rgb.rs  rgba.rs  ycbcr.rs
pixors-color/src/common/: mod.rs
pixors-color/src/operation/: color.rs
pixors-desktop/: Cargo.toml  build.rs  parse_iced.rs  test.rs  test_events.patch
pixors-desktop/src/: app.rs  approx.rs  bridge.js  controller.rs  document_view.rs  effect.rs  embedded_ui.rs  engine.rs  file_ops.rs  icons.rs  main.rs  path_builder.rs  theme.rs  viewport_cache_sink.rs  viewport_cache_source.rs
pixors-desktop/src/action/: mod.rs
pixors-desktop/src/color/: conversion.rs  primaries.rs  space.rs
pixors-desktop/src/components/: badge.rs  button.rs  card.rs  divider.rs  dropdown.rs  filters_panel.rs  icon_button.rs  input.rs  layers_panel.rs  menu_bar.rs  mock_filter_panel.rs  mod.rs  panel.rs  pill.rs  progress_bar.rs  resize_handle.rs  sidebar_grid.rs  slider.rs  spinner.rs  status_bar.rs  switch.rs  tab_bar.rs  toolbar.rs  viewport.rs  workspace_bar.rs
pixors-desktop/src/controller/: dialogs.rs  effects.rs  filters.rs  keyboard.rs  layers.rs  mod.rs  pipeline.rs  tabs.rs  tick.rs  viewport.rs
pixors-desktop/src/io/: png.rs  tiff.rs
pixors-desktop/src/layout/: dialog.rs  ghost_width.rs  list_item.rs  mod.rs  pane_grid.rs  panel.rs  sidebar.rs
pixors-desktop/src/modal/: filter_search.rs  mod.rs  ui_showcase.rs
pixors-desktop/src/page/: menu_bar.rs  mod.rs  status_bar.rs  workspace_bar.rs
pixors-desktop/src/pages/: darkroom.rs  editor.rs  library.rs  mod.rs
pixors-desktop/src/panel/: filter.rs  layers.rs  mod.rs  new_filter.rs
pixors-desktop/src/pixel/: component.rs  format.rs  pack.rs  rgb.rs
pixors-desktop/src/state/: editor.rs  history.rs  mod.rs  tab.rs
pixors-desktop/src/storage/: mod.rs
pixors-desktop/src/ui/: app.rs  file_ops.rs  icons.rs  mod.rs
pixors-desktop/src/util/: mod.rs
pixors-desktop/src/viewport/: camera.rs  mip_builder.rs  mod.rs  pipeline.rs  program.rs  sink.rs  state.rs  tab_state.rs  tile_cache.rs  tile_cache_sink.rs  tile_cache_source.rs  tiled_texture.rs  viewport_state.rs
pixors-desktop/src/widgets/: loading_bar.rs  mod.rs  panel_header.rs  pill.rs  separator_h.rs  tooltip.rs
pixors-document/: Cargo.toml
pixors-document/src/: editor.rs  history.rs  ingest.rs  lib.rs  session.rs  tab.rs
pixors-document/src/action/: mod.rs
pixors-document/src/document/: asset.rs  cache.rs  canvas.rs  develop.rs  layer.rs  mod.rs  transform.rs
pixors-document/src/mutation/: impls.rs  mod.rs
pixors-document/src/render/: compiler.rs
pixors-document/src/view/: mod.rs  params.rs
pixors-engine/: Cargo.toml  IMPLEMENTATION_PLAN.md  MOD_STRUCTURE_REFACTOR.md  REFACTOR_DISCUSSION.md  config.yaml  test_winit.rs  test_ws.mjs
pixors-engine/docs/: ARCHITECTURE.md  BACKEND_REFACTOR_PLAN.md  DATA_MODEL.md  DECISIONS.md  EXECUTION_MODEL.md  IMAGE_SUPPORT_PLAN.md  MIP_PYRAMID.md  OPERATIONS.md  OPERATION_GRAPH.md  OVERVIEW.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_8_REVIEW.md  README.md  REVIEW.md  ROADMAP.md  SCHEDULER.md  STORAGE_ENGINES.md  STORAGE_RETRIEVAL_BETTER.md  TILE_SYSTEM.md
pixors-engine/src/: approx.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
pixors-engine/src/cache/: cache_reader.rs  cache_writer.rs  disk_cache.rs  mod.rs
pixors-engine/src/color/: chromaticity.rs  cie.rs  conversion.rs  detect.rs  matrix.rs  mod.rs  pipeline.rs  primaries.rs  sample.rs  transfer.rs  transfer_lut.rs  xyz.rs
pixors-engine/src/common/: blend.rs  mod.rs
pixors-engine/src/composite/: mod.rs
pixors-engine/src/container/: access.rs  image.rs  layer.rs  meta.rs  mod.rs  neighborhood.rs  scanline.rs  tile.rs
pixors-engine/src/convert/: conversion.rs  matrix.rs  mod.rs  pipeline.rs  premultiply.rs  simd.rs  tile_stream.rs
pixors-engine/src/data/: buffer.rs  device.rs  mod.rs  neighborhood.rs  scanline.rs  tile.rs
pixors-engine/src/data_transform/: mod.rs  to_neighborhood.rs  to_scanline.rs  to_tile.rs  to_tile_block.rs
pixors-engine/src/egraph/: executor.rs  graph.rs  mod.rs  runner.rs  stage.rs
pixors-engine/src/gpu/: buffer.rs  context.rs  encoder.rs  kernel.rs  mod.rs  pool.rs  scheduler.rs  tests.rs
pixors-engine/src/graph/: graph.rs  item.rs  mod.rs  path.rs  path_builder.rs  routed.rs
pixors-engine/src/image/: alpha.rs  buffer.rs  channel.rs  meta.rs  mip.rs  mod.rs  neighborhood.rs  raw.rs  sample.rs  tile.rs  typed.rs
pixors-engine/src/io/: accumulator.rs  mod.rs  png.rs  tiff.rs
pixors-engine/src/operation/: mod.rs
pixors-engine/src/pipeline/: emitter.rs  executor.rs  graph.rs  mod.rs  node.rs  path_builder.rs  runner.rs  spec.rs  tests.rs
pixors-engine/src/pixel/: accumulator.rs  component.rs  mod.rs  pixel.rs  rgba.rs  types.rs  xyz.rs
pixors-engine/src/runtime/: chain.rs  event.rs  mod.rs  pipeline.rs
pixors-engine/src/server/: app.rs  event_bus.rs  mod.rs  protocol.rs  router.rs  server.rs  session.rs  state.rs  ws.rs
pixors-engine/src/sgraph/: actions.rs  cache.rs  compile.rs  graph.rs  history.rs  mod.rs  node.rs  pipeline.rs  ports.rs  tests.rs
pixors-engine/src/stage/: actors.rs  context.rs  kinds.rs  mod.rs  node.rs
pixors-engine/src/storage/: buffer.rs  (+5 more)
pixors-engine/tests/: golden_conversion.rs
pixors-image/: Cargo.toml
pixors-image/src/: codec.rs  exif.rs  image.rs  lib.rs
pixors-ops/: Cargo.toml
pixors-ops/src/: lib.rs
pixors-state/: Cargo.toml
pixors-state/src/: editor.rs  lib.rs  path_builder.rs  tab.rs  tile_cache_sink.rs  tile_cache_source.rs  viewport_cache_source.rs
pixors-ult-test/: Cargo.toml
pixors-ult-test/src/: engine.rs  error.rs  main.rs  utils.rs
pixors-viewport/: Cargo.toml
pixors-viewport/src/: camera.rs  context.rs  error.rs  lib.rs  pipeline.rs  shader.wgsl  viewport.rs
pixors-wasm/: Cargo.toml
pixors-wasm/src/: approx.rs  error.rs  lib.rs
(+664 files in other folders)
