[workspace]
members = ["pixors-engine", "pixors-desktop"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
# ── Deny: mechanical, no reason to ignore ──
collapsible_if                  = "deny"
doc_overindented_list_items     = "deny"
excessive_precision             = "deny"
io_other_error                  = "deny"
manual_div_ceil                 = "deny"
manual_is_multiple_of           = "deny"
needless_borrow                 = "deny"
needless_range_loop             = "deny"
ptr_arg                         = "deny"
redundant_closure               = "deny"
slow_vector_initialization      = "deny"
unnecessary_cast                = "deny"
unnecessary_map_or              = "deny"
# ── Warn ──
question_mark                   = "warn"
# ── Allow ──
module_inception                = "allow"
new_without_default             = "allow"
too_many_arguments              = "allow"
type_complexity                 = "allow"