[package]
name = "pixors-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
pixors-engine = { path = "../pixors-engine" }
iced = { version = "0.14", features = ["advanced", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = ["menu"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
wide = "1.3.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.12.0"
png = "0.18.1"
tiff = "0.11.3"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rfd = "0.17.2"

[lints]
workspace = true
