[package]
name = "pixors-document"
version.workspace = true
edition.workspace = true

[dependencies]
pixors-engine = { path = "../pixors-engine" }
pixors-image = { path = "../pixors-image" }
pixors-ops = { path = "../pixors-ops" }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
typetag = "0.2"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
