[package]
name = "pixors-engine"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
wide = "1.3.0"
half = { version = "2.7.1", features = ["bytemuck"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.18"
png = "0.18.1"
tiff = "0.11.3"

[lints]
workspace = true
