[package]
name = "pixors-engine"
version.workspace = true
edition.workspace = true

[dependencies]
enum_dispatch = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
wide = "1.3.0"
half = { version = "2.7.1", features = ["bytemuck"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
png = "0.18.1"
tiff = "0.11.3"
petgraph = { version = "0.8", default-features = false, features = ["stable_graph", "serde-1"] }
wgpu = { version = "22.1", default-features = false, features = ["wgsl"] }
pollster = "0.3"

[lints]
workspace = true
