[package]
name = "pixors-engine"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
rayon = "1.12.0"
half = { version = "2.7.1", features = ["bytemuck"] }
wide = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = { version = "22.1", default-features = false, features = ["spirv"] }
pollster = "0.3"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
kamadak-exif = "0.6.1"
petgraph = { version = "0.8", default-features = false, features = ["stable_graph"] }

[lints]
workspace = true
