[package]
name = "pixors-image"
version.workspace = true
edition.workspace = true

[dependencies]
pixors-engine = { path = "../pixors-engine" }
bytemuck = { version = "1.25.0", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
png = "0.18.1"
tiff = "0.11.3"
kamadak-exif = "0.6.1"
lz4_flex = "0.13.0"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
wgpu = { version = "22.1", default-features = false, features = ["spirv"] }
mozjpeg = "0.10"
webp = "0.3"
zune-jpeg = "0.4"

[lints]
workspace = true
