[package]
name = "pixors-ops"
version.workspace = true
edition.workspace = true

[dependencies]
pixors-engine = { path = "../pixors-engine" }
pixors-image = { path = "../pixors-image" }
pixors-shader = { path = "../pixors-shader" }
bytemuck = { version = "1.25.0", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
wide = "1.3.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
lz4_flex = "0.13.0"

[lints]
workspace = true
