[package]
name = "pixors-state"
version.workspace = true
edition.workspace = true

[dependencies]
pixors-engine = { path = "../pixors-engine" }
pixors-color = { path = "../pixors-color" }
pixors-image = { path = "../pixors-image" }
pixors-ops = { path = "../pixors-ops" }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.12.5"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
