[package]
name = "pixors-ult-test"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14", features = ["advanced", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = ["menu"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
wide = "1.3.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.12.0"

[lints]
workspace = true
