[package]
name = "pixors-viewport"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.20", features = ["webgl", "webgpu"] }
glam = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.95"
bytemuck = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"

[dependencies.web-sys]
version = "0.3.95"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "console",
    "Performance",
]
