[package]
name = "pixors-wasm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "24", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
bytemuck = "1.25"
half = { version = "2.7.1", features = ["bytemuck"] }
wide = "1.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

